<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFront"
    android:orientation="horizontal" >

    <Button
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_home_black_24dp"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@color/colorFront"
        android:text="@string/home" />
    
    
    <Button
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/messageBtn"
        android:background="@color/colorFront"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_chat_bubble_outline_black_24dp"
        android:gravity="center"
        android:text="@string/message" />
    

    <Button
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/aboutBtn"
        android:background="@color/colorFront"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_account_circle_black_24dp"
        android:gravity="center"
        android:text="@string/me" />

</LinearLayout>