<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:gravity="fill"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/backLogBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="#ffffff"
            android:text="@string/back"
            android:textColor="@color/colorFront"
            android:textSize="24dp" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="110dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:src="@drawable/icon"
            android:contentDescription="@string/action_sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/newEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:autofillHints="">

                <requestFocus />
            </EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:id="@+id/newPassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:autofillHints="" />
            <EditText
                android:id="@+id/repeatPassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="left"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:text="@string/sign_up_as"
                android:layout_weight="1"/>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/student"
                    android:tag="3"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tutor"
                    android:tag="2"/>
            </RadioGroup>

            <TextView
                android:id="@+id/alertText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#ff0000" />

            <Button
                android:id="@+id/signUp_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorFront"
                android:text="@string/sign_up"
                android:textColor="@color/colorBack"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/waitlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/now_loading" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>