<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:gravity="fill"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:src="@drawable/icon"
            android:contentDescription="@string/action_sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:autofillHints="">

                <requestFocus />
            </EditText>


            <EditText
                android:id="@+id/passText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <TextView
                android:id="@+id/errorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:textColor="#ff0000"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:background="@color/colorFront"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorBack"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/waitlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar4"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/now_loading" />
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/new_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorBack"
            android:padding="0dp"
            android:text="@string/new_user"
            android:textColor="@color/colorFront" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>